--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,1 +1,8 @@
-<h1>Hello World!</h1>
+<div class="container">
+  <h1>Hello World!</h1>
+
+  <%#= link_to "Logar", new_user_session_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+  <div class="mt-5">
+    <%= fudgeball_button "Logar", url: new_user_session_path %>
+  </div>
+</div>
