--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,9 +15,9 @@
     </div>
     <div>
       <% if user_signed_in? %>
-        <%= link_to "Minha página", main_page_path(logged_patient, logged_doctor), class: "inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0" %>
+        <%= navbar_button "Logout", { url: destroy_user_session_path }, { data: { turbo_method: :delete } } %>
       <% else %>
-        <%= link_to "Entrar", new_user_session_path, class: "inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0" %>
+        <%= navbar_button "Login", url: new_user_session_path %>
       <% end %>
     </div>
   </div>
