--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <%= render "layouts/navbar", logged_patient: @logged_patient, logged_doctor: @logged_doctor %>
+    <%= render "layouts/navbar" %>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
