--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,6 +17,7 @@
       <% if user_signed_in? %>
         <%= navbar_button "Logout", { url: destroy_user_session_path }, { data: { turbo_method: :delete } } %>
       <% else %>
+        <%= navbar_button "Registrar-se", url: new_user_registration_path %>
         <%= navbar_button "Login", url: new_user_session_path %>
       <% end %>
     </div>
