--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+.btn-primary {
+  @apply bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded;
 }
 
-*/
+.btn-tertiary {
+  @apply inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0;
+}
+
+.field:nth-of-type(n+2) {
+  @apply mt-4;
+}
+
+h2 {
+  @apply text-center text-4xl font-semibold text-xl tracking-tight;
+}
