--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,22 +1,15 @@
 <div class="container flex items-center justify-center">
   <div class="w-3/12">
-    <h2 class="text-center text-4xl font-semibold text-xl tracking-tight">Esqueceu sua senha?</h2>
+    <h2>Esqueceu sua senha?</h2>
 
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post, class: "mt-8" }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+    <%= fudgeball_form model: resource, url: password_path(resource_name), method: :post, class: "mt-8" do |form| %>
+      <%= render "devise/shared/error_messages", resource: %>
 
-      <div class="field">
-        <%= f.label :email, "E-mail" %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "w-full" %>
-      </div>
+      <%= form.input :email, :email, label: "E-mail", autofocus: true, autocomplete: "email", class: "w-full" %>
 
-      <div class="actions mt-5">
-        <%= f.submit "Enviar", class: "bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded w-full" %>
-      </div>
+      <%= form.submit "Enviar", class: "mt-5 w-full" %>
     <% end %>
 
-    <div class="mt-5">
-      <%= render "devise/shared/links" %>
-    </div>
+    <%= render "devise/shared/links" %>
   </div>
 </div>
