--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,18 @@
 <div class="container flex items-center justify-center">
   <div class="w-3/12">
-    <h2 class="text-center text-4xl font-semibold text-xl tracking-tight">Registrar</h2>
+    <h2>Registrar</h2>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "mt-8" }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+    <%= fudgeball_form model: resource, url: registration_path(resource_name), class: "mt-8" do |form| %>
+      <%= render "devise/shared/error_messages", resource: %>
 
-      <div class="field">
-        <%= f.label :email, "E-mail" %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", required: true, class: "w-full" %>
-      </div>
+      <%= form.input :email, :email, label: "E-mail", autofocus: true, autocomplete: "email", required: true, class: "w-full" %>
+      <%= form.input :password, :password, label: "Senha", autocomplete: "new-password", required: true, class: "w-full" %>
+      <%= form.input :password_confirmation, :password, label: "Confirme a senha", autocomplete: "new-password", required: true, class: "w-full" %>
+      <%= form.select :classification, { label: "Tipo de usuário" }, { required: true, class: "w-full" } %>
 
-      <div class="field mt-4">
-        <%= f.label :password, "Senha" %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> caracteres no mínimo)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password", required: true, class: "w-full" %>
-      </div>
-
-      <div class="field mt-4">
-        <%= f.label :password_confirmation, "Repita a senha" %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true, class: "w-full" %>
-      </div>
-
-      <div class="field mt-4">
-        <%= f.label :classification, "Tipo de usuário" %><br />
-        <%= f.select :classification, options_for_user_classification, {}, { required: true, class: "w-full" } %>
-      </div>
-
-      <div class="actions mt-5">
-        <%= f.submit "Registrar-se", class: "bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded w-full" %>
-      </div>
+      <%= form.submit "Registrar-se", class: "mt-5 w-full" %>
     <% end %>
 
-    <div class="mt-5">
-      <%= render "devise/shared/links" %>
-    </div>
+    <%= render "devise/shared/links" %>
   </div>
 </div>
