--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,17 @@
-<h2>Change your password</h2>
+<div class="container flex items-center justify-center">
+  <div class="w-3/12">
+    <h2>Alterar senha</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+    <%= fudgeball_form model: resource, url: password_path(resource_name), method: :patch do |form| %>
+      <%= render "shared/error_messages", resource: %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <%= form.hidden_field :reset_password_token %>
+      <%= form.input :password, :password, label: "Senha (#{@minimum_password_length} caracteres no mínimo)", autofocus: true, autocomplete: "new-password" %>
+      <%= form.input :password_confirmation, :password, label: "Confirme a senha", autocomplete: "new-password" %>
+
+      <%= form.submit "Alterar senha", class: "mt-5 w-full" %>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
