--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,7 +3,7 @@
     <h2>Esqueceu sua senha?</h2>
 
     <%= fudgeball_form model: resource, url: password_path(resource_name), method: :post, class: "mt-8" do |form| %>
-      <%= render  shared/error_messages", resource: %>
+      <%= render "shared/error_messages", resource: %>
 
       <%= form.input :email, :email, label: "E-mail", autofocus: true, autocomplete: "email", class: "w-full" %>
 
