--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -6,6 +6,10 @@
   @apply bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded;
 }
 
+.btn-error {
+  @apply bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded;
+}
+
 .btn-tertiary {
   @apply inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0;
 }
