--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -13,5 +13,9 @@
 
       <%= form.submit "Registrar-se", class: "mt-5 w-full" %>
     <% end %>
+
+    <div class="mt-5">
+      <%= link_to "Editar dados de usuário", edit_user_registration_path %>
+    </div>
   </div>
 </div>
