--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,7 +2,7 @@
   <div class="w-3/12">
     <h2>Esqueceu sua senha?</h2>
 
-    <%= fudgeball_form model: resource, url: password_path(resource_name), method: :post, class: "mt-8" do |form| %>
+    <%= fudgeball_form model: resource, url: password_path(resource_name), class: "mt-8" do |form| %>
       <%= render "shared/error_messages", resource: %>
 
       <%= form.input :email, :email, label: "E-mail", autofocus: true, autocomplete: "email", class: "w-full" %>
