--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,24 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container flex items-center justify-center">
+  <div class="w-3/12">
+    <h2>Editar <%= resource.class.model_name.human %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "shared/error_messages", resource: %>
+    <%= fudgeball_form model: resource, url: registration_path(resource_name), method: :patch, class: "mt-8" do |form| %>
+      <%= render "shared/error_messages", resource: %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <%= form.input :email, :email, label: "E-mail", required: true, autofocus: true, autocomplete: "email", class: "w-full" %>
+      <%= form.input :password, :password, label: "Senha", autocomplete: "new-password", class: "w-full" %>
+      <%= form.input :password_confirmation, :password, label: "Confirme a senha", autocomplete: "new-password", class: "w-full" %>
+      <%= form.input :current_password, :password, label: "Senha atual", required: true, autocomplete: "current-password", class: "w-full" %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <%= form.submit "Atualizar dados", class: "mt-5 w-full" %>
     <% end %>
+
+    <div class="mt-5">
+      <%= link_to "Cancelar", dispatches_path %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<div>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
-<%= link_to "Back", :back %>
+</div>
