--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Buttons */
 .btn-primary {
   @apply bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded;
 }
@@ -14,10 +15,20 @@
   @apply inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0;
 }
 
+/* Inputs */
+.field label {
+  @apply block text-gray-700 text-sm font-bold mb-2;
+}
+
+.field input {
+  @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none;
+}
+
 .field:nth-of-type(n+2) {
   @apply mt-4;
 }
 
+/* Typography */
 h2 {
   @apply text-center text-4xl font-semibold text-xl tracking-tight;
 }
