--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -4,15 +4,23 @@
 
 /* Buttons */
 .btn-primary {
-  @apply bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded;
+  @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none;
+}
+
+.btn-secondary {
+  @apply py-2.5 px-5 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200;
+}
+
+.btn-transparent {
+  @apply text-gray-900 border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5;
+}
+
+.btn-success {
+  @apply focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5;
 }
 
 .btn-error {
-  @apply bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded;
-}
-
-.btn-tertiary {
-  @apply inline-block text-sm px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white mt-4 lg:mt-0;
+  @apply focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5;
 }
 
 /* Inputs */
@@ -26,6 +34,11 @@
 
 .field:nth-of-type(n+2) {
   @apply mt-4;
+}
+
+/* Menus */
+#user-menu a {
+  @apply block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100;
 }
 
 /* Typography */
