--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,8 @@
       <%= render "shared/error_messages", resource: %>
 
       <%= form.input :email, :email, label: "E-mail", autofocus: true, autocomplete: "email", required: true, class: "w-full" %>
+      <%= form.input :name, :text, label: "Nome", autocomplete: "name", required: true, class: "w-full" %>
+      <%= form.input :last_name, :text, label: "Sobrenome", autocomplete: "last_name", required: true, class: "w-full" %>
       <%= form.input :password, :password, label: "Senha", autocomplete: "new-password", required: true, class: "w-full" %>
       <%= form.input :password_confirmation, :password, label: "Confirme a senha", autocomplete: "new-password", required: true, class: "w-full" %>
       <%= form.select :classification, { label: "Tipo de usuário" }, { required: true, class: "w-full" } %>
