--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,26 +1,14 @@
-<nav class="flex items-center justify-between flex-wrap bg-teal-500 p-6">
-  <%= link_to root_path, class: "flex items-center flex-shrink-0 text-white mr-6" do %>
-    <svg class="fill-current h-8 w-8 mr-2" width="54" height="54" viewBox="0 0 54 54" xmlns="http://www.w3.org/2000/svg"><path d="M13.5 22.1c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05zM0 38.3c1.8-7.2 6.3-10.8 13.5-10.8 10.8 0 12.15 8.1 17.55 9.45 3.6.9 6.75-.45 9.45-4.05-1.8 7.2-6.3 10.8-13.5 10.8-10.8 0-12.15-8.1-17.55-9.45-3.6-.9-6.75.45-9.45 4.05z"/></svg>
-    <span class="font-semibold text-xl tracking-tight">Web Healthy Care</span>
-  <% end %>
-  <div class="block lg:hidden">
-    <button class="flex items-center px-3 py-2 border rounded text-teal-200 border-teal-400 hover:text-white hover:border-white">
-      <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-    </button>
+<nav class="bg-white border-b border-gray-200 dark:bg-gray-900">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+  <%= render "layouts/navbar/logo" %>
+  <div class="flex items-center md:order-2">
+
+    <% if user_signed_in? %>
+      <%= render "layouts/navbar/menu_user" %>
+    <% else %>
+      <%= fudgeball_button "Entrar", url: new_user_session_path %>
+    <% end %>
+    <%= render "layouts/navbar/menu_trigger" %>
   </div>
-  <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
-    <div class="text-sm lg:flex-grow">
-      <%#= link_to "Sobre nós", nil, id: "responsive-header", class: "block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4" %>
-      <%#= link_to "Contato", nil, id: "responsive-header", class: "block mt-4 lg:inline-block lg:mt-0 text-teal-200 hover:text-white mr-4" %>
-    </div>
-    <div>
-      <% if user_signed_in? %>
-        <%= fudgeball_navbar_button "Minha página", url: dispatches_path %>
-        <%= fudgeball_navbar_button "Logout", { url: destroy_user_session_path }, { data: { turbo_method: :delete } } %>
-      <% else %>
-        <%= fudgeball_navbar_button "Registrar-se", url: new_user_registration_path %>
-        <%= fudgeball_navbar_button "Login", url: new_user_session_path %>
-      <% end %>
-    </div>
-  </div>
+  <%= render "layouts/navbar/menu_items" %>
 </nav>
