--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -5,8 +5,8 @@
     <%= fudgeball_form model: @patient, url: patients_path, class: "mt-8" do |form| %>
       <%= fudgeball_form_alert class: "my-4" %>
 
-      <%= form.input :name, :text, label: "Nome", autofocus: true, required: true, class: "w-full" %>
-      <%= form.input :last_name, :text, label: "Sobrenome", required: true, class: "w-full" %>
+      <%= form.input :name, :text, label: "Nome", autofocus: true, required: true, class: "w-full", value: current_user.name %>
+      <%= form.input :last_name, :text, label: "Sobrenome", required: true, class: "w-full", value: current_user.last_name %>
       <%= form.input :rg, :text, label: "RG", class: "w-full" %>
       <%= form.input :cpf, :cpf, label: "CPF", class: "w-full" %>
       <%= form.input :email, :email, label: "E-mail", class: "w-full", value: current_user.email %>
