--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -28,7 +28,7 @@
   @apply block text-gray-700 text-sm font-bold mb-2;
 }
 
-.field input {
+.field input, select {
   @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none;
 }
 
