--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,6 +15,7 @@
       <%= form.input :password, :password, label: "Senha", autocomplete: "new-password", class: "w-full" %>
       <%= form.input :password_confirmation, :password, label: "Confirme a senha", autocomplete: "new-password", class: "w-full" %>
       <%= form.input :current_password, :password, label: "Senha atual", required: true, autocomplete: "current-password", class: "w-full" %>
+      <%= form.attach_input :profile_photo, label: "Foto de perfil", accept: "image/png, image/jpeg" %>
 
       <%= form.submit "Atualizar dados", class: "mt-5 w-full" %>
     <% end %>
