--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -5,7 +5,7 @@
     <%= fudgeball_form model: resource, url: confirmation_path(resource_name) do |form| %>
       <%= render "shared/error_messages", resource: %>
 
-      <%= form.input :email, :email, label: "E-mail", autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+      <%= form.input :email, :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
 
       <%= form.submit "Reenviar instruções de confirmação", class: "mt-5 w-full" %>
     <% end %>
