--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -5,7 +5,7 @@
     <%= fudgeball_form model: resource, url: password_path(resource_name), class: "mt-8" do |form| %>
       <%= render "shared/error_messages", resource: %>
 
-      <%= form.input :email, :email, label: "E-mail", autofocus: true, autocomplete: "email", class: "w-full" %>
+      <%= form.input :email, :email, autofocus: true, autocomplete: "email", class: "w-full" %>
 
       <%= form.submit "Enviar", class: "mt-5 w-full" %>
     <% end %>
