--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -5,11 +5,11 @@
     <%= fudgeball_form model: @doctor, url: doctors_path, class: "mt-8" do |form| %>
       <%= fudgeball_form_alert class: "my-4" %>
 
-      <%= form.input :name, :text, label: "Nome", autofocus: true, required: true, class: "w-full", value: current_user.name %>
-      <%= form.input :last_name, :text, label: "Sobrenome", required: true, class: "w-full", value: current_user.last_name %>
-      <%= form.input :crm, :text, label: "CRM", class: "w-full" %>
-      <%= form.input :cpf, :cpf, label: "CPF", class: "w-full" %>
-      <%= form.input :email, :email, label: "E-mail", class: "w-full", value: current_user.email %>
+      <%= form.input :name, :text, autofocus: true, required: true, class: "w-full", value: current_user.name %>
+      <%= form.input :last_name, :text, required: true, class: "w-full", value: current_user.last_name %>
+      <%= form.input :crm, :text, class: "w-full" %>
+      <%= form.input :cpf, :cpf, class: "w-full" %>
+      <%= form.input :email, :email, class: "w-full", value: current_user.email %>
 
       <%= form.submit "Registrar-se", class: "mt-5 w-full" %>
     <% end %>
