--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <%= render "patients/show/aside_menu" %>
+  <%= render "patients/show/aside_menu", patient: @patient, doctor: @doctor, access_control: @access_control %>
   <%= render "patients/show/content", patient: @patient %>
 </div>
