--- a/app/views/patients/show/_aside_menu.html.erb
+++ b/app/views/patients/show/_aside_menu.html.erb
@@ -1,32 +1,16 @@
-<button data-drawer-target="default-sidebar" data-drawer-toggle="default-sidebar" aria-controls="default-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:focus:ring-gray-600">
-  <span class="sr-only">Abrir menu lateral</span>
-  <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-      <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
-  </svg>
-</button>
+<div id="aside-menu">
+  <button data-drawer-target="default-sidebar" data-drawer-toggle="default-sidebar" aria-controls="default-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:focus:ring-gray-600">
+    <span class="sr-only">Abrir menu lateral</span>
+    <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
+    </svg>
+  </button>
 
-<aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar" style="margin-top: 65px;">
-  <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
-    <ul class="space-y-2 font-medium">
-      <li>
-        <%= link_to nil, class: "flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100" do %>
-          <%= image_tag "icons/consultations.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
-          <span class="ml-3">Consultas</span>
-        <% end %>
-      </li>
-      <li>
-        <%= link_to nil, class: "flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100" do %>
-          <%= image_tag "icons/surgeries.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
-          <span class="ml-3">Cirurgias</span>
-        <% end %>
-      </li>
-      <li>
-        <%= link_to nil, class: "flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100" do %>
-          <%= image_tag "icons/authorizations.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
-          <span class="flex-1 ml-3 whitespace-nowrap">Autorizações</span>
-          <span class="inline-flex items-center justify-center w-3 h-3 p-3 ml-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300">3</span>
-        <% end %>
-      </li>
-    </ul>
-  </div>
-</aside>
+  <aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar" style="margin-top: 65px;">
+    <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
+      <ul class="space-y-2 font-medium">
+        <%= render "patients/show/aside_menu/options", patient:, doctor:, access_control: %>
+      </ul>
+    </div>
+  </aside>
+</div>
