--- a/app/views/patients/show/aside_menu/_authorization_control.html.erb
+++ b/app/views/patients/show/aside_menu/_authorization_control.html.erb
@@ -6,13 +6,13 @@
       <span class="inline-flex items-center justify-center w-3 h-3 p-3 ml-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300"><%= patient.access_controls.where(expires_at: nil).count %></span>
     <% end %>
 
-  <% elsif access_control&.expires_at&.future? %>
+  <% elsif access_control&.allowed? %>
     <div class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100">
       <%= image_tag "icons/clock.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
       <span class="ml-3">Acesso autorizado até <%= access_control.expires_at.strftime("%d/%m/%Y %Hh%M") %></span>
     </div>
 
-  <% elsif access_control.present? && access_control.expires_at.nil? %>
+  <% elsif access_control&.waiting_allow? %>
     <div class="flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100">
       <%= image_tag "icons/clock.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
       <span class="ml-3">Aguardando autorização</span>
