Feat (WHC-8): Consultation register

--- a/app/views/patients/consultations/index.html.erb
+++ b/app/views/patients/consultations/index.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
   <%= render "patients/shared/aside_menu", patient: @patient, doctor: @doctor, access_control: @access_control %>
-  <%= render "patients/consultations/index/content", access_controls: @access_controls, patient: @patient %>
+  <%= render "patients/consultations/index/content", patient: @patient, consultations: @consultations %>
 </div>
