--- a/app/views/patients/consultations/show/_content.html.erb
+++ b/app/views/patients/consultations/show/_content.html.erb
@@ -1,4 +1,4 @@
-<div class="p-4 sm:ml-64 mb-5">
+<div id="content" class="p-4 sm:ml-64 mb-5">
   <%= fudgeball_return_button patient_consultations_path(patient) %>
   <div class="mt-8">
     <p class="mt-2"><span class="font-bold">Paciente: </span> <%= consultation.patient.full_name %></p>
