--- a/app/views/patients/consultations/new/_content.html.erb
+++ b/app/views/patients/consultations/new/_content.html.erb
@@ -1,4 +1,4 @@
-<div class="p-4 sm:ml-64 mb-5">
+<div id="content" class="p-4 sm:ml-64 mb-5">
   <div class="w-6/12 mx-auto">
     <%= fudgeball_return_button patient_consultations_path(patient) %>
     <h2>Cadastrar nova consulta</h2>
