--- a/app/views/patients/consultations/new/_content.html.erb
+++ b/app/views/patients/consultations/new/_content.html.erb
@@ -7,7 +7,7 @@
       <%= fudgeball_form_alert class: "my-4" %>
 
       <%= form.input :date, :date, autofocus: true, required: true, class: "w-full" %>
-      <%= form.text_area :reason, rows: 10, required: true, class: "w-full" %>
+      <%= form.text_area :reason, rows: 10, class: "w-full" %>
       <%= form.attach_input :sick_note, accept: "image/png, image/jpeg, application/pdf" %>
 
       <%= form.submit "Cadastrar", class: "mt-8 w-full" %>
