--- a/app/views/patients/shared/aside_menu/_authorization_control.html.erb
+++ b/app/views/patients/shared/aside_menu/_authorization_control.html.erb
@@ -3,7 +3,7 @@
     <%= link_to patient_access_controls_path(patient), class: "flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100" do %>
       <%= image_tag "icons/authorizations.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
       <span class="flex-1 ml-3 whitespace-nowrap">Autorizações</span>
-      <span class="inline-flex items-center justify-center w-3 h-3 p-3 ml-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300"><%= patient.access_controls.where(expires_at: nil).count %></span>
+      <span class="inline-flex items-center justify-center w-3 h-3 p-3 ml-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full"><%= patient.access_controls.where(expires_at: nil).count %></span>
     <% end %>
 
   <% elsif access_control&.allowed? %>
