--- a/app/views/patients/diagnostics/treatments/index/_treatments.html.erb
+++ b/app/views/patients/diagnostics/treatments/index/_treatments.html.erb
@@ -2,13 +2,14 @@
   <table class="w-full text-sm text-left text-gray-500">
     <thead class="text-xs text-gray-700 uppercase bg-blue-100">
       <tr>
-        <th scope="col" class="px-6 py-3">Data</th>
         <th scope="col" class="px-6 py-3">Tipo</th>
+        <th scope="col" class="px-6 py-3">Início</th>
+        <th scope="col" class="px-6 py-3">Fim</th>
         <th scope="col" class="px-6 py-3">Ação</th>
       </tr>
     </thead>
     <tbody>
-      <%= render partial: "patients/surgeries/index/surgery", collection: surgeries %>
+      <%= render partial: "patients/diagnostics/treatments/index/treatment", collection: treatments %>
     </tbody>
   </table>
 </div>
