--- a/app/views/patients/surgeries/index/_surgery.html.erb
+++ b/app/views/patients/surgeries/index/_surgery.html.erb
@@ -1,5 +1,5 @@
 <tr id="<%= dom_id surgery %>" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50">
   <td class="px-6 py-4"><%= surgery.date.strftime("%d/%m/%Y") %></td>
-  <td class="px-6 py-4"><%= surgery.doctor.full_name %></td>
+  <td class="px-6 py-4"><%= t(surgery.classification, scope: "activerecord.attributes.surgery/classification") %></td>
   <td class="px-6 py-4"><%= link_to "Visualizar", patient_surgery_path(surgery.patient, surgery), class: "font-medium text-blue-600 dark:text-blue-500 hover:underline" %></td>
 </tr>
