--- a/app/views/patients/access_controls/index.html.erb
+++ b/app/views/patients/access_controls/index.html.erb
@@ -1,4 +1,3 @@
 <div class="container">
-  <%= render "patients/shared/aside_menu", patient: @patient, doctor: @doctor, access_control: @access_control %>
-  <%= render "patients/access_controls/index/content", access_controls: @access_controls, patient: @patient %>
+  <%= render partial: "patients/access_controls/index/authorization", collection: @access_controls, as: :access_control, locals: { patient: @patient } %>
 </div>
