--- a/app/views/patients/consultations/new.html.erb
+++ b/app/views/patients/consultations/new.html.erb
@@ -1,4 +1,16 @@
 <div class="container">
-  <%= render "patients/shared/aside_menu", patient: @patient, doctor: @doctor, access_control: @access_control %>
-  <%= render "patients/consultations/new/content", patient: @patient, consultation: @consultation %>
+  <div class="w-6/12 mx-auto">
+    <%= fudgeball_return_button patient_consultations_path(@patient) %>
+    <h2>Cadastrar nova consulta</h2>
+
+    <%= fudgeball_form model: @consultation, url: patient_consultations_path(@patient), class: "mt-8" do |form| %>
+      <%= fudgeball_form_alert class: "my-4" %>
+
+      <%= form.input :date, :date, autofocus: true, required: true, class: "w-full" %>
+      <%= form.text_area :reason, rows: 10, class: "w-full" %>
+      <%= form.attach_input :sick_note, accept: "image/png, image/jpeg, application/pdf" %>
+
+      <%= form.submit "Cadastrar", class: "mt-8 w-full" %>
+    <% end %>
+  </div>
 </div>
