--- a/app/views/patients/dashboards/show.html.erb
+++ b/app/views/patients/dashboards/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container flex flex-col items-center">
+<div class="flex flex-col items-center">
   <div class="mt-48 w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
     <div class="mt-5 flex flex-col items-center pb-5">
       <%= image_tag @patient.user.profile_photo, class: "w-24 h-24 mb-3 rounded-full shadow-lg", alt: "Patient photo" if @patient.user.profile_photo.attached? %>
