--- a/app/views/patients/diagnostics/new.html.erb
+++ b/app/views/patients/diagnostics/new.html.erb
@@ -1,4 +1,18 @@
 <div class="container">
-  <%= render "patients/shared/aside_menu", patient: @patient, doctor: @doctor, access_control: @access_control %>
-  <%= render "patients/diagnostics/new/content", patient: @patient, diagnostic: @diagnostic %>
+  <div class="w-6/12 mx-auto">
+    <%= fudgeball_return_button patient_diagnostics_path(@patient) %>
+    <h2>Cadastrar novo diagnóstico</h2>
+
+    <%= fudgeball_form model: @diagnostic, url: patient_diagnostics_path(@patient), method: :post, class: "mt-8" do |form| %>
+      <%= fudgeball_form_alert class: "my-4" %>
+
+      <%= form.select :disease, { choices: disease_options }, { required: true, class: "w-full" } %>
+      <%= form.input :diagnosed_at, :date, autofocus: true, required: true, class: "w-full" %>
+      <%= form.input :cured_at, :date, class: "w-full" %>
+      <%= form.text_area :related_symptoms, rows: 10, class: "w-full" %>
+      <%= form.select :status, {}, { required: true, class: "w-full" } %>
+
+      <%= form.submit "Cadastrar", class: "mt-8 w-full" %>
+    <% end %>
+  </div>
 </div>
