--- a/app/views/patients/diagnostics/show.html.erb
+++ b/app/views/patients/diagnostics/show.html.erb
@@ -1,4 +1,26 @@
-<div class="container">
-  <%= render "patients/shared/aside_menu", patient: @patient, doctor: @doctor, access_control: @access_control %>
-  <%= render "patients/diagnostics/show/content", patient: @patient, diagnostic: @diagnostic %>
+<div id="sub-content" class="container">
+  <%= fudgeball_return_button patient_diagnostics_path(@patient) %>
+
+  <div class="mt-8">
+    <p class="mt-2"><span class="font-bold">Paciente:</span> <%= @diagnostic.patient.full_name %></p>
+    <p class="mt-2"><span class="font-bold">Doença:</span> <%= @diagnostic.disease.name %></p>
+    <p class="mt-2"><span class="font-bold">Data do diagnóstico:</span> <%= @diagnostic.diagnosed_at.strftime("%d/%m/%Y") %></p>
+    <p class="mt-2"><span class="font-bold">Data da cura:</span> <%= @diagnostic.cured_at&.strftime("%d/%m/%Y") %></p>
+    <p class="mt-2 font-bold">Sintomas relatados:</p>
+    <p class="mt-2 mb-5"><%= @diagnostic.related_symptoms %></p>
+
+    <% if current_user.doctor? %>
+      <%= fudgeball_form model: @diagnostic, url: patient_diagnostic_path(@patient, @diagnostic), method: :patch, class: "mt-2" do |form| %>
+        <%= fudgeball_form_alert class: "my-4" %>
+        <p class="font-bold">Status:</p>
+        <%= form.select :status, { label: false }, { onchange: "this.form.requestSubmit()", class: "w-96" } %>
+      <% end %>
+    <% else %>
+      <p class="mt-2"><span class="font-bold">Status:</span> <%= t(@diagnostic.status, scope: "activerecord.attributes.diagnostic/status") %></p>
+    <% end %>
+  </div>
+
+  <div class="mt-16">
+    <%= fudgeball_call_to_action "Tratamentos", url: patient_diagnostic_treatments_path(@patient, @diagnostic), icon: :treatments %>
+  </div>
 </div>
