--- a/app/views/patients/diagnostics/treatments/show.html.erb
+++ b/app/views/patients/diagnostics/treatments/show.html.erb
@@ -1,4 +1,10 @@
 <div class="container">
-  <%= render "patients/shared/aside_menu", patient: @patient, doctor: @doctor, access_control: @access_control %>
-  <%= render "patients/diagnostics/treatments/show/content", patient: @patient, diagnostic: @diagnostic, treatment: @treatment %>
+  <%= fudgeball_return_button patient_diagnostic_treatments_path(@patient, @diagnostic) %>
+  <div class="mt-8">
+    <p class="mt-2"><span class="font-bold">Doença:</span> <%= @diagnostic.disease.name %></p>
+    <p class="mt-2"><span class="font-bold">Data de início:</span> <%= @treatment.started_at&.strftime("%d/%m/%Y") %></p>
+    <p class="mt-2"><span class="font-bold">Data do fim:</span> <%= @treatment.ended_at&.strftime("%d/%m/%Y") %></p>
+    <hr class="h-px my-8 bg-gray-200 border-0">
+    <%= render "patients/diagnostics/treatments/show/#{@treatment.treatable_type.parameterize}", treatable: @treatment.treatable %>
+  </div>
 </div>
