--- a/app/views/patients/index/_patient.html.erb
+++ b/app/views/patients/index/_patient.html.erb
@@ -7,5 +7,5 @@
     </div>
   </th>
   <td class="px-6 py-4"><%= patient.cpf %></td>
-  <td class="px-6 py-4"><%= link_to "Visualizar", patient_path(patient), class: "font-medium text-blue-600 dark:text-blue-500 hover:underline" %></td>
+  <td class="px-6 py-4"><%= link_to "Visualizar", patient_dashboard_path(patient), class: "font-medium text-blue-600 dark:text-blue-500 hover:underline" %></td>
 </tr>
