--- a/app/views/patients/surgeries/show.html.erb
+++ b/app/views/patients/surgeries/show.html.erb
@@ -1,4 +1,8 @@
 <div class="container">
-  <%= render "patients/shared/aside_menu", patient: @patient, doctor: @doctor, access_control: @access_control %>
-  <%= render "patients/surgeries/show/content", patient: @patient, surgery: @surgery %>
+  <%= fudgeball_return_button patient_surgeries_path(@patient) %>
+  <div class="mt-8">
+    <p class="mt-2"><span class="font-bold">Paciente:</span> <%= @surgery.patient.full_name %></p>
+    <p class="mt-2"><span class="font-bold">Data da cirurgia:</span> <%= @surgery.date.strftime("%d/%m/%Y") %></p>
+    <p class="mt-2"><span class="font-bold">Tipo da cirurgia:</span> <%= t(@surgery.classification, scope: "activerecord.attributes.surgery/classification") %></p>
+  </div>
 </div>
