Medication Prescription Controller

--- a/app/views/patients/diagnostics/show.html.erb
+++ b/app/views/patients/diagnostics/show.html.erb
@@ -21,6 +21,6 @@
   </div>
 
   <div class="mt-16">
-    <%= fudgeball_call_to_action "Tratamentos", url: patient_diagnostic_treatments_path(@patient, @diagnostic), icon: :treatments %>
+    <%= fudgeball_call_to_action "Tratamentos", url: patient_diagnostic_treatments_path(@patient, @diagnostic), icon: { name: :treatments, color: :primary } %>
   </div>
 </div>
