--- a/app/views/patients/diagnostics/diets/new.html.erb
+++ b/app/views/patients/diagnostics/diets/new.html.erb
@@ -6,6 +6,7 @@
     <%= fudgeball_form model: @diet, url: patient_diagnostic_diets_path(@patient, @diagnostic), method: :post, class: "mt-8" do |form| %>
       <%= fudgeball_form_alert class: "my-4" %>
 
+      <%= form.input :date, :date, required: true, autofocus: true, class: "w-full" %>
       <%= form.text_area :breakfast, rows: 10, class: "w-full" %>
       <%= form.text_area :lunch, rows: 10, class: "w-full" %>
       <%= form.text_area :dinner, rows: 10, class: "w-full" %>
