--- a/app/views/patients/diagnostics/treatments/show.html.erb
+++ b/app/views/patients/diagnostics/treatments/show.html.erb
@@ -5,6 +5,6 @@
     <p class="mt-2"><span class="font-bold">Data de início:</span> <%= @treatment.started_at&.strftime("%d/%m/%Y") %></p>
     <p class="mt-2"><span class="font-bold">Data do fim:</span> <%= @treatment.ended_at&.strftime("%d/%m/%Y") %></p>
     <hr class="h-px my-8 bg-gray-200 border-0">
-    <%= render "patients/diagnostics/treatments/show/#{@treatment.treatable_type.parameterize}", treatable: @treatment.treatable %>
+    <%= render "patients/diagnostics/treatments/show/#{@treatment.treatable_type.parameterize}", treatable: @treatable %>
   </div>
 </div>
