--- a/app/views/patients/shared/aside_menu/_options.html.erb
+++ b/app/views/patients/shared/aside_menu/_options.html.erb
@@ -20,3 +20,10 @@
     <span class="ml-3">Diagnósticos</span>
   <% end %>
 <% end if allow?("patients/diagnostics", "show", [patient, doctor]) %>
+
+<%= tag.li do %>
+  <%= link_to patient_exams_path(patient), class: "flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100" do %>
+    <%= image_tag "icons/exams.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
+    <span class="ml-3">Exames</span>
+  <% end %>
+<% end if allow?("patients/exams", "show", [patient, doctor]) %>
