--- a/app/views/patients/dashboards/show.html.erb
+++ b/app/views/patients/dashboards/show.html.erb
@@ -1,9 +1,3 @@
-<div class="flex flex-col items-center">
-  <div class="mt-48 w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-    <div class="mt-5 flex flex-col items-center pb-5">
-      <%= image_tag @patient.user.profile_photo, class: "w-24 h-24 mb-3 rounded-full shadow-lg", alt: "Patient photo" if @patient.user.profile_photo.attached? %>
-      <h5 class="text-xl font-medium text-gray-900"><%= @patient.full_name %></h5>
-      <span class="mt-2 text-sm text-gray-500"><%= @patient.email %></span>
-    </div>
-  </div>
+<div class="flex flex-col items-center mt-48">
+  <%= render "shared/presentation_card", photo: @patient.user.profile_photo, name: @patient.full_name, email: @patient.email %>
 </div>
